# cargo-dependabot-test.rs

./: CHANGELOG.md  Cargo.toml  README.md  git-cliff.toml.bak  release-please-config.json  release-plz.toml.bak
.github/workflows/: release-plz.yml.bak  release.yml
src/: lib.rs  main.rs
