[package]
name = "cargo-dependabot-test"
version = "0.5.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["Lin Rongbin <linrongbin16@outlook.com>"]
description = "Cargo Dependency BOT Test."
repository = "https://github.com/linrongbin16/cargo-dependabot-test.rs"
readme = "README.md"
homepage = "https://github.com/linrongbin16/cargo-dependabot-test.rs"
documentation = "https://docs.rs/cargo-dependabot-test.rs"
license = "GPL-3.0"
keywords = ["cargo", "dependabot"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "unicode"] }
